# PP-RAG

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  COMMUNICATION_QUICK_REFERENCE.md  COMMUNICATION_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  README.md  README_VARIANT2.md  VARIANT2_CHECKLIST.md  VARIANT2_QUICK_START.txt  VARIANT2_README.md  VARIANT2_SUMMARY.md  bench_encrypt_batch.py  bench_encrypt_cpp  bench_encrypt_cpp.cpp  build.bat  build2.bat  requirements.txt
build2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
config/: ckks_128bit.json  config.yaml  config2.yaml
dataset/docs/: sample_doc1.txt
results/: benchmark2_log.txt  retrieve_timings_1000.json  timings.json  timings2.json
scripts/: 01_generate_data.py  02_bench_setup.py  02_bench_setup2.py  03_bench_retrieve.py  03_bench_retrieve2.py  04_bench_update.py  04_bench_update2.py  05_run_all.py  05_run_all2.py  06_visualize.py  07_run_multiscale.py  bootstrap.sh  embed_documents.py  eval_rag_scores.py  rag_call.py  run_retrieve_1000.py
src/core/: bench_wrapper.cpp  bench_wrapper2.cpp  homo_norm.cpp  poly_softmin.cpp  seal_utils.cpp  secure_hnsw.cpp  secure_hnsw2.cpp  secure_kmeans.cpp
src/python/: __init__.py  bench_runner.py  bench_runner2.py  ckks_wrapper.py  ckks_wrapper2.py  data_generator.py  visualizer.py
tools/: profile_encrypt_batch.py
